log/build_2024-06-19_00-28-10/ssd_detection/stderr.log
  File "/home/kimjunsuk/ros2_ws/install/ssd_detection/lib/python3.8/site-packages/ssd_detection/ssd_detection.py", line 70
    self.window.setGeometry(-100, -100, width//4, height//)
                                                          ^
SyntaxError: invalid syntax

